[package]
name = "easychain"
version = "0.1.0"
authors = ["fxsjy <ccnusjy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonrpc-core = "14.0.3"
keccak-hash = "0.4.0"
kvdb = "0.4.0"
kvdb-rocksdb = "0.6.0"
rlp = "0.4.0"
