[package]
name = "easychain"
version = "0.1.0"
authors = ["fxsjy <ccnusjy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name="ycli"
path="cmd/src/main.rs"

[[bin]]
name="ychain"
path="rpc/src/main.rs"


[dependencies]
jsonrpc-core = "14.0.3"
keccak-hash = "0.4.0"
kvdb = "0.4.0"
kvdb-rocksdb = "0.6.0"
rlp = "0.4.0"

[workspace]
members = ["ledger", "state", "vm", "net", "consensus"]
